--- a/show.html
+++ b/show.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="one-time, temporary, disposable,
             encrypted, image, hosting, imagehosting">
-        <meta name="description" content="Disposable encrypted image hosting.">
+        <meta name="description" content="One-time encrypted image hosting.">
         <title>one-time.nl</title>
-        <link rel="stylesheet" type="text/css" href="style.css" integrity="sha256-A+mp7vJCFyKqPxkZwzrpWBxt/l0xOy2XPv7UpsIzqxE="/>
+        <link rel="stylesheet" type="text/css" href="style.css" integrity="sha256-DyN2YXg1FS4y5zHXHveXPXYEtNXXNVs4KrfZS99EMUw="/>
         <script type="text/javascript" src="js/crypt.js" integrity="sha256-cteJOhh6NgIrVOjxCjRByvQ+Xfegdk3390yAs6a0xGA="></script>
         <script type="text/javascript" src="js/header.js" integrity="sha256-Kk/bxAs2l23Z4a8Pf3240Kyhm0LXlYaD2V5wx8wKEfw="></script>
         <script type="text/javascript" src="js/pageloader.js" integrity="sha256-V4KAn6tgXM2zyd5alsAsRtyop0+HLpcvLY8t4wjK2R8="></script>
