Added support for all file types (audio, video, etc.)

--- a/404.html
+++ b/404.html
@@ -4,25 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="one-time, temporary, disposable,
-            encrypted, image, hosting, imagehosting">
-        <meta name="description" content="One-time encrypted image hosting.">
+                    encrypted, file, hosting, filehosting">
+        <meta name="description" content="One-time encrypted file hosting.">
         <title>one-time.nl</title>
-        <link rel="stylesheet" type="text/css" href="style.css" integrity="sha256-DyN2YXg1FS4y5zHXHveXPXYEtNXXNVs4KrfZS99EMUw="/>
-        <script type="text/javascript" src="js/header.js" integrity="sha256-Kk/bxAs2l23Z4a8Pf3240Kyhm0LXlYaD2V5wx8wKEfw="></script>
-        <script type="text/javascript" src="js/pageloader.js" integrity="sha256-V4KAn6tgXM2zyd5alsAsRtyop0+HLpcvLY8t4wjK2R8="></script>
-        <script type="text/javascript" src="js/main_404.js" integrity="sha256-lnIOZKKOkr51W3CRXRkG2NYO/04o9WWdbR1YCk8st38="></script>
-        <link rel="icon" type="image/png" href="favicon.png" integrity="sha256-HS1nRPHLiVK+T+k/2WwGVplMLFPnUDFsEOZpnwkZkN0="/>
+        <link rel="stylesheet" type="text/css" href="style.css?101" integrity="sha256-KoaOtFADbpeX7GbVOjZiZh3vkRgI9QwQWhbxrc2Re+A="/>
+        <script type="text/javascript" src="js/header.js?101" integrity="sha256-u+w1lVXQOl2xd87Q99TbiGvIN8tr/ZyhlDwRAjKqbVo="></script>
+        <script type="text/javascript" src="js/pageloader.js?101" integrity="sha256-hVRvLFy/QVwW1VCClO2Pv58bsYOkLilrvQTD5PVexnk="></script>
+        <script type="text/javascript" src="js/main_404.js?101" integrity="sha256-lnIOZKKOkr51W3CRXRkG2NYO/04o9WWdbR1YCk8st38="></script>
+        <link rel="icon" type="image/png" href="favicon.png?101" integrity="sha256-HS1nRPHLiVK+T+k/2WwGVplMLFPnUDFsEOZpnwkZkN36"/>
     </head>
     <body>
         <div id="header">
             <div id="logo">
                 <a href="https://one-time.nl/">
-                    <img id="logo_svg" src="imgs/logo.svg">
+                    <img id="logo_svg" src="imgs/logo.svg?101" integrity="sha256-CwlksD0PZ2ttZST1++Tuv6pD7SdSzJ9f7GIv1eWxzp4=">
                 </a>
             </div>
             <div id="faq">
                 <a href="https://one-time.nl/faq.html">
-                    <img id="faq_svg" src="imgs/faq.svg">
+                    <img id="faq_svg" src="imgs/faq.svg?101" integrity="sha256-gJybCskA7eL3O9yV/xWGWoaKDK0ROrmAmprFcBvqjhI=">
                 </a>
             </div>
         </div>
@@ -32,7 +32,7 @@
         <div id="description">
             Files are uploaded on the server in an encrypted form. Only the
             one who has a correct URL can decrypt them (even the site owner
-            can't). Images are permanently deleted from the server after the
+            can't). Files are permanently deleted from the server after the
             first view. No logs are recorded. Read the FAQ for more
             information.
         </div>
