--- a/faq.html
+++ b/faq.html
@@ -4,48 +4,47 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="one-time, temporary, disposable,
-            encrypted, image, hosting, imagehosting">
-        <meta name="description" content="One-time encrypted image hosting.">
+                    encrypted, file, hosting, filehosting">
+        <meta name="description" content="One-time encrypted file hosting.">
         <title>one-time.nl</title>
-        <link rel="stylesheet" type="text/css" href="style.css" integrity="sha256-DyN2YXg1FS4y5zHXHveXPXYEtNXXNVs4KrfZS99EMUw="/>
-        <script type="text/javascript" src="js/header.js" integrity="sha256-Kk/bxAs2l23Z4a8Pf3240Kyhm0LXlYaD2V5wx8wKEfw="></script>
-        <script type="text/javascript" src="js/main_faq.js" integrity="sha256-kU73XKD7banErFpG9P3LpJe2B/NMfdLyfDYrOLDiL20="></script>
-        <link rel="icon" type="image/png" href="favicon.png" integrity="sha256-HS1nRPHLiVK+T+k/2WwGVplMLFPnUDFsEOZpnwkZkN0="/>
+        <link rel="stylesheet" type="text/css" href="style.css?101" integrity="sha256-KoaOtFADbpeX7GbVOjZiZh3vkRgI9QwQWhbxrc2Re+A="/>
+        <script type="text/javascript" src="js/header.js?101" integrity="sha256-u+w1lVXQOl2xd87Q99TbiGvIN8tr/ZyhlDwRAjKqbVo="></script>
+        <script type="text/javascript" src="js/main_faq.js?101" integrity="sha256-kU73XKD7banErFpG9P3LpJe2B/NMfdLyfDYrOLDiL20="></script>
+        <link rel="icon" type="image/png" href="favicon.png?101" integrity="sha256-HS1nRPHLiVK+T+k/2WwGVplMLFPnUDFsEOZpnwkZkN36"/>
     </head>
     <body>
         <div id="header">
             <div id="logo">
                 <a href="https://one-time.nl/">
-                    <img id="logo_svg" src="imgs/logo.svg">
+                    <img id="logo_svg" src="imgs/logo.svg?101" integrity="sha256-CwlksD0PZ2ttZST1++Tuv6pD7SdSzJ9f7GIv1eWxzp4=">
                 </a>
             </div>
             <div id="faq">
                 <a href="https://one-time.nl/faq.html">
-                    <img id="faq_svg" src="imgs/faq.svg">
+                    <img id="faq_svg" src="imgs/faq.svg?101" integrity="sha256-gJybCskA7eL3O9yV/xWGWoaKDK0ROrmAmprFcBvqjhI=">
                 </a>
             </div>
         </div>
         <div id="body_faq">
             <b>What is this site?</b><br>
-            This is a disposable encrypted image hosting. When you upload an
-            image, your browser generates a random password, encrypts image
+            This is a disposable encrypted file hosting. When you upload a
+            file, your browser generates a random password, encrypts the file
             with this passwords and sends ciphertext to the server. Password
-            stored in the link to the image after '#' symbol, and it never
+            stored in the link to the file after '#' symbol, and it never
             leaves your computer, if you aren't sharing a link with somebody,
             of course.<br>
             When you open the link the process is inverted: you download the
             ciphertext from server, decrypt it with password extracted from the
-            link and see a picture. Take a good look (or save it), because it's
+            link and see the file. Take a good look (or save it), because it's
             already deleted from the server!<br><br>
-            <b>Wait, are you not prohibiting saving of images?</b><br>
+            <b>Wait, are you not prohibiting saving of files?</b><br>
             It's impossible. If I forbid a right-click of a mouse or make
             something similar, you can always take a screenshot or even a photo
             of the screen with an external camera.<br><br>
             <b>What limitations are set on the site?</b><br>
-            The maximum file size: 10 MB.<br>
-            Allowed file types: jpg, png and gif.<br>
-            Also unviewed images will be deleted after 30 days.<br><br>
-            <b>Are images really deleted after first view? Do I have to trust
+            The maximum file size: 100 MB.<br>
+            Also unviewed files will be deleted after 30 days.<br><br>
+            <b>Are files really deleted after first view? Do I have to trust
                 you?</b><br>
             Yes, you have to trust me. But think about it: why in the world do
             I need to store an encrypted junk which I can not even view? This
