--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="one-time, temporary, disposable,
-            encrypted, image, hosting, imagehosting">
-        <meta name="description" content="One-time encrypted image hosting.">
+            encrypted, file, hosting, filehosting">
+        <meta name="description" content="One-time encrypted file hosting.">
         <title>one-time.nl</title>
-        <link rel="stylesheet" type="text/css" href="style.css" integrity="sha256-DyN2YXg1FS4y5zHXHveXPXYEtNXXNVs4KrfZS99EMUw="/>
-        <script type="text/javascript" src="js/crypt.js" integrity="sha256-cteJOhh6NgIrVOjxCjRByvQ+Xfegdk3390yAs6a0xGA="></script>
-        <script type="text/javascript" src="js/upload.js" integrity="sha256-f6KUcUnVW8qiCp81ys/YynEBMUrNGhr7OFzJJKHwuMY="></script>
-        <script type="text/javascript" src="js/index.js" integrity="sha256-oQBme7IPwD7W+T1PFIrCrzYyiV2NZuV1ERr6kcponl8="></script>
-        <script type="text/javascript" src="js/header.js" integrity="sha256-Kk/bxAs2l23Z4a8Pf3240Kyhm0LXlYaD2V5wx8wKEfw="></script>
-        <script type="text/javascript" src="js/pageloader.js" integrity="sha256-V4KAn6tgXM2zyd5alsAsRtyop0+HLpcvLY8t4wjK2R8="></script>
-        <script type="text/javascript" src="js/progress.js" integrity="sha256-XsvCgP+IeDH4fzDLm3UR8WP8Yfto3H9HozpyeiBuzs4="></script>
-        <script type="text/javascript" src="js/link.js" integrity="sha256-wZlYq/US5sPec5mOwJv9FUMHET06Lb5rRqSrLFdXszI="></script>
-        <script type="text/javascript" src="js/history.js" integrity="sha256-2j+3jDuAg5zCaKzADo8FgWa2P3o1ArQX30dJ6qtB85c="></script>
-        <script type="text/javascript" src="js/main_index.js" integrity="sha256-z4b0pkWqXADpWFofyvhu3bRwSaNDBKlMvV9pVWw7+5k="></script>
-        <link rel="icon" type="image/png" href="favicon.png" integrity="sha256-HS1nRPHLiVK+T+k/2WwGVplMLFPnUDFsEOZpnwkZkN0="/>
+        <link rel="stylesheet" type="text/css" href="style.css?101" integrity="sha256-KoaOtFADbpeX7GbVOjZiZh3vkRgI9QwQWhbxrc2Re+A="/>
+        <script type="text/javascript" src="js/crypt.js?101" integrity="sha256-cteJOhh6NgIrVOjxCjRByvQ+Xfegdk3390yAs6a0xGA="></script>
+        <script type="text/javascript" src="js/upload.js?101" integrity="sha256-5o0aErqrGR19cZW2pk9RrDkLNUlpKRbm65XglEf3gAE="></script>
+        <script type="text/javascript" src="js/index.js?101" integrity="sha256-oQBme7IPwD7W+T1PFIrCrzYyiV2NZuV1ERr6kcponl8="></script>
+        <script type="text/javascript" src="js/header.js?101" integrity="sha256-u+w1lVXQOl2xd87Q99TbiGvIN8tr/ZyhlDwRAjKqbVo="></script>
+        <script type="text/javascript" src="js/pageloader.js?101" integrity="sha256-hVRvLFy/QVwW1VCClO2Pv58bsYOkLilrvQTD5PVexnk="></script>
+        <script type="text/javascript" src="js/progress.js?101" integrity="sha256-XsvCgP+IeDH4fzDLm3UR8WP8Yfto3H9HozpyeiBuzs4="></script>
+        <script type="text/javascript" src="js/link.js?101" integrity="sha256-MSTWo9Bur/HrsE7h2/or2/2GOTBULgDH62d6QC1Cw4E="></script>
+        <script type="text/javascript" src="js/history.js?101" integrity="sha256-2j+3jDuAg5zCaKzADo8FgWa2P3o1ArQX30dJ6qtB85c="></script>
+        <script type="text/javascript" src="js/main_index.js?101" integrity="sha256-z4b0pkWqXADpWFofyvhu3bRwSaNDBKlMvV9pVWw7+5k="></script>
+        <link rel="icon" type="image/png" href="favicon.png?101" integrity="sha256-HS1nRPHLiVK+T+k/2WwGVplMLFPnUDFsEOZpnwkZkN36"/>
     </head>
     <body>
         <div id="header">
             <div id="logo">
                 <a href="https://one-time.nl/">
-                    <img id="logo_svg" src="imgs/logo.svg">
+                    <img id="logo_svg" src="imgs/logo.svg?101" integrity="sha256-CwlksD0PZ2ttZST1++Tuv6pD7SdSzJ9f7GIv1eWxzp4=">
                 </a>
             </div>
             <div id="faq">
                 <a href="https://one-time.nl/faq.html">
-                    <img id="faq_svg" src="imgs/faq.svg">
+                    <img id="faq_svg" src="imgs/faq.svg?101" integrity="sha256-gJybCskA7eL3O9yV/xWGWoaKDK0ROrmAmprFcBvqjhI=">
                 </a>
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div id="description">
             Files are uploaded on the server in an encrypted form. Only the
             one who has a correct URL can decrypt them (even the site owner
-            can't). Images are permanently deleted from the server after the
+            can't). Files are permanently deleted from the server after the
             first view. No logs are recorded. Read the FAQ for more
             information.
         </div>
