Changed email and faq

--- a/faq.html
+++ b/faq.html
@@ -57,8 +57,8 @@
             device and many other sensitive information.<br><br>
             <b>JS cryptography is bad.</b><br>
             I know, but I do whatever I can to make it more secure. I use HSTS,
-            CSP and integrity check of all loaded JavaScripts and CSS. JS
-            code is kept is simple as possible, no external libs are used.
+            CSP, DNSSEC and integrity check of all loaded JavaScripts and CSS.
+            JS code is kept is simple as possible, no external libs are used.
             JavaScript code of all site combined is about 800 lines long.<br>
             And believe me, I really don't want to store a possible illegal
             stuff on my server in a plain form.<br><br>
