--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
         <title>one-time.nl</title>
         <link rel="stylesheet" type="text/css" href="style.css?102" integrity="sha256-VUoGeNlB9V3a34i69KZaH/wRUvS21FvVu9TMyafeeoM="/>
         <script type="text/javascript" src="js/header.js?102" integrity="sha256-qBLGl/zQS494S4A2v/XgO4FEkOGGBsxYf4YZyq3Wzxs="></script>
-        <script type="text/javascript" src="js/main_faq.js?103" integrity="sha256-9SJUJKSUB1MWO0FgTgxcilQSNEsMaaxxx6pr8IwKcrI="></script>
+        <script type="text/javascript" src="js/main_faq.js?103" integrity="sha256-tpWsXjoBa+eb/ShQqxHrOTwDUOSHOLVseGfz36dnp+Q="></script>
         <link rel="icon" type="image/png" href="favicon.png?102" integrity="sha256-HS1nRPHLiVK+T+k/2WwGVplMLFPnUDFsEOZpnwkZkN36"/>
     </head>
     <body>
@@ -65,7 +65,9 @@
             <b>Where can I see the site code?</b><br>
             The frontend is available for you in a browser inspector. Or you
             can download the
-            <a href="https://github.com/grez911/one-time.nl">repository</a>
+            <a href="https://github.com/sergei-bondarenko/one-time.nl">
+                repository
+            </a>
             where is contained the frontend and backend code, and even the
             server configuration files, so you can clone this site completely.
             <br><br>
